[package]
name = "hive"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["file", "json"]
file = []
json = []

[dependencies]
tokio = { version = "1.23", features = ["macros", "rt", "fs", "io-util"]}
mlua = {version = "0.8", features = ["lua54", "async", "vendored", "serialize"]}
hyper = {version = "0.14.20", features = ["server", "http1", "tcp", "stream"]}
http = "0.2"
http-body = "0.4"
futures-util = "0.3"

serde_urlencoded = "0.7.1"

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
mime = "0.3.16"

clap = {version = "4.0", features = ["derive"]}

multer = "2.0.4"

chrono = "0.4.22"

nanoid = "0.4.0"

mysql_async = "0.31.2"
dateparser = "0.1.7"

log = { version = "0.4", features = ["std", "serde"] }
fast_log = {version = "1.5", features = ["zip"]}

# websocket
# tungstenite = "0.18.0"
