[package]
name = "hive"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["lua"]
ws = ["tokio-tungstenite", "futures-channel", "tungstenite"]
lua = ["mlua", "mysql"]
js = ["v8"]
# mysql = ["sqlx", "time"]
mysql = ["mysql_async", "dateparser"]
h2 = []

[dependencies]
tokio = { version = "1", features = ["full"]}
mlua = {version = "0.8", features = ["lua54", "async", "vendored", "serialize"], optional = true}
hyper = {version = "0.14", features = ["server", "http1", "http2", "tcp", "stream"]}
http = "0.2"
http-body = "0.4"
futures-util = "0.3"

serde_urlencoded = "0.7.1"

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
mime = "0.3.16"

clap = {version = "4.0", features = ["derive"]}

multer = "2.0.4"

# chrono = "0.4.22"

nanoid = "0.4.0"

log = { version = "0.4", features = ["std", "serde"] }
fast_log = {version = "1.5", features = ["zip"]}

notify = "5.1"

num_cpus = "1.15.0"

once_cell = {version = "1.16.0"}

# websocket
tokio-tungstenite = {version = "0.18", optional = true}
futures-channel = {version = "0.3.25", optional = true}
tungstenite = {version = "0.18.0", optional = true}

downloader = {version = "0.2"}
zip = "0.6"

v8 = {version = "0.61.0", optional = true}

async-trait = "0.1"

# sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "mysql", "time", "decimal" ], optional = true }
# time = { version = "0.3.17", features = ["formatting", "parsing", "alloc"], optional = true }

mysql_async = {version = "0.31.2", optional = true}
dateparser = {version = "0.1", optional = true}

matchit = "0.7.0"

# serde-querystring = "0.2"

[profile.release]
# debug = true
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
