[package]
name = "req"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "req"
crate-type = ['cdylib']

[features]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]
vendored = ["mlua/vendored"]

[dependencies]
mlua = { version = "0.8", features = ["module"] }

ureq = {version = "2.5.0", features = ["json", "charset", "cookies"]}
cookie_store = { version = "0.19", default-features = false, features = ["preserve_order"] }
url = "2.3.1"

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"


hive_time = {path = "../../hive_time"}
